Fix PWA 404 issue for GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Countdown Timer PWA",
   "short_name": "Countdown",
-  "start_url": "./index.html",
+  "start_url": "/PWA_WAN/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007aff",
